# HUST_HeroAim_2023

./: AutoAim.cpp  AutoAim.h  CMakeLists.txt  README.md
armor_detector/: CMakeLists.txt
armor_detector/include/: Classifier.h  Detector.h  ROI_Accelerator.h  Score.h
armor_detector/src/: ArmorFinder.cpp  CNN.cpp  TargetChooser.cpp  Tracker.cpp
driver/include/: GxCamera.h  VideoSaver.h
driver/src/: DaHen.cpp  Picture.cpp  Video.cpp
pose_estimate/: CMakeLists.txt
pose_estimate/include/: Bumper.hpp  ExtendedKalman.hpp  NormalEKF.h  OrthogonalBaEdge.hpp  Predictor.h  VehicleTracking.h  VertexAB.hpp
pose_estimate/src/: Kalman.cpp  NormalEKF.cpp  PoseSolver.cpp
src/: AutoAim.h  trainSVM.cpp  trainSVM.h
src/armor_detector/include/: ArmorFinder.h  Inference.hpp  LightBarFinder.h  TargetChooser.h  Tracker.h  pyboostcvconverter.h
src/armor_detector/src/: Classifier.cpp  Detector.cpp  Inference.cpp  LightBarFinder.cpp  ROI_Accelerator.cpp  Score.cpp
src/driver/: CMakeLists.txt
src/driver/include/: DxImageProc.h  GxIAPI.h  SerialPort.h  VideoCapture.h
src/driver/src/: GxCamera.cpp  SerialPort.cpp  VideoCapture.cpp  VideoSaver.cpp
src/pose_estimate/include/: EulerAngleKF.h  Kalman.h  PoseSolver.h  Predictor_main.h
src/pose_estimate/src/: EulerAngleKF.cpp  PoseSolver_bak.cpp  Predictor.cpp  Predictor_main.cpp  VehicleTracking.cpp
src/utils/: CMakeLists.txt
src/utils/include/: UDPSender.hpp
src/utils/model/: buff.mapping  label.txt
src/utils/src/: Config.cpp
src/utils/tools/: SVM_predict_sklearn.py  armor.onnx  drawGraph.py  svm_numbers.xml  testSVM.py
utils/: testArray.cpp
utils/include/: Array.hpp  Config.h  Params.h  Thread.h  newArray.hpp
utils/model/: best_06_02.mapping  best_06_02.onnx  best_06_02.xml  buff.xml  fc.onnx
utils/src/: Params.cpp  Thread.cpp  UDPSender.cpp
utils/tools/: auto_start.sh  cam.txt  clear_logs.sh  find_devices.py  fit_trajectory.py  init.json  init_back.json  model.onnx  model_best.onnx  pnp.csv  trainSVM_with_cv2.py  trainSVM_with_sklearn.py
